fix dropdown on mobile

--- a/_src-lp/blocks/b-productswithselectors/b-productswithselectors.scss
+++ b/_src-lp/blocks/b-productswithselectors/b-productswithselectors.scss
@@ -297,7 +297,7 @@
   }
 
   .b-dropdownbox-container .block > div:not(:first-child) {
-    display: block !important;
+    display: block;
   }
 
   .b-productswithselectors, .b-dropdownbox-container .block > div:not(:first-child) {
